# arduboy-emu

./: .gitignore  Cargo.toml  README.md  RELEASE_VERIFICATION.md  ROADMAP.md
.github/workflows/: ci.yml  deploy-pages.yml  update-rom-catalog.yml
crates/core/examples/: rom_diag.rs  rom_smoke.rs
crates/core/src/: arduboy_file.rs  audio_buffer.rs  cpu.rs  debugger.rs  disasm.rs  display.rs  elf.rs  gdb_server.rs  gif.rs  hex.rs  lib.rs  memory.rs  opcodes.rs  pcd8544.rs  png.rs  profiler.rs  savestate.rs  snapshot.rs
crates/core/src/peripherals/: adc.rs  eeprom.rs  fx_flash.rs  mod.rs  pll.rs  spi.rs  timer16.rs  timer4.rs  timer8.rs  watchdog.rs
crates/core/tests/: instruction_semantics.rs  rom_regression.rs
crates/ffi/: Cargo.toml
crates/ffi/include/: arduboy_ffi.h
crates/ffi/src/: lib.rs
crates/frontend-minifb/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
frontend-qt/: CMakeLists.txt  README.md  app.rc  resources.qrc
frontend-qt-mobile/: CMakeLists.txt  README.md
frontend-qt-mobile/android/: AndroidManifest.xml
frontend-qt-mobile/android/res/drawable/: ic_launcher_foreground.xml
frontend-qt-mobile/android/res/values/: ic_launcher_background.xml
frontend-qt-mobile/android/src/io/github/nanamitm/arduboyemu/: ArduboyActivity.java
frontend-qt-mobile/qml/: Main.qml
frontend-qt-mobile/src/: MobileEmulator.cpp  MobileEmulator.h  main.cpp
frontend-qt/src/: AudioOutput.cpp  AudioOutput.h  DisplayWidget.cpp  DisplayWidget.h  EmulatorCore.cpp  EmulatorCore.h  GamepadInput.cpp  GamepadInput.h  MainWindow.cpp  MainWindow.h  main.cpp
scripts/: build-arduboy-collection-catalog.mjs
web/: README.md  _headers  audio-worklet.js  build.sh  emulator-worker.js  index.html  main.js  manifest.webmanifest  service-worker.js  skins.js
web/catalogs/: arduboy-collection.json
web/pkg/: arduboy.d.ts  arduboy.js  arduboy_bg.wasm  arduboy_bg.wasm.d.ts
