[package]
name = "arduboy-wasm"
version = "0.8.1"
edition = "2021"
description = "WebAssembly bindings for arduboy-core (browser client)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arduboy-core = { path = "../core" }
wasm-bindgen = "0.2"
# Readable panic messages in the browser console.
console_error_panic_hook = "0.1"

[profile.release]
# Optimize the wasm binary for size.
opt-level = "s"
lto = true
